--- a/views/payment_success.ejs
+++ b/views/payment_success.ejs
@@ -1,5 +1,4 @@
 <center>
     <h3>Payment successful!</h3>
-    <h3>Your plan is upgraded to premium!</h3>
-    <a href="<%=receipt_url%>">View receipt</a>
+    <h3>Your plan is upgraded..</h3>
 </center>
