--- a/views/payments.ejs
+++ b/views/payments.ejs
@@ -19,8 +19,9 @@
               <div id="card-errors" role="alert"></div>
             </div>
           <br>
-          <input type="hidden" name="email" value="manasvikaplay123@gmail.com">
-         <input type="hidden" name="plan" value="gold">
+          <input type="hidden" name="email" value="manasvi@gmail.com">
+         <input type="hidden" name="plan" value="premium">
+         <input type="hidden" name="interval" value="month">
             <button>Submit Payment</button>
           </form>
           </center>
